Cannot sculpt shape keys #31185

Closed
opened 2012-04-30 06:06:51 +02:00 by Malaika Boyd · 4 comments

%%%When switching to sculpt mode, the mesh reverts to the basis and not the selected shape key, making it impossible to sculpt a shape key. I wasn't sure if this was deliberate, but I thought I'd report it since it makes creating shape keys fairly onerous.

I searched and couldn't find a previous report for this issue, so please excuse this if it's a duplication.

I'm using the official 2.63 on Windows XP 64 (though I usually use Ubuntu 11.04 and will soon be testing it there).
%%%

%%%When switching to sculpt mode, the mesh reverts to the basis and not the selected shape key, making it impossible to sculpt a shape key. I wasn't sure if this was deliberate, but I thought I'd report it since it makes creating shape keys fairly onerous. I searched and couldn't find a previous report for this issue, so please excuse this if it's a duplication. I'm using the official 2.63 on Windows XP 64 (though I usually use Ubuntu 11.04 and will soon be testing it there). %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Will look into this.%%%

%%%Will look into this.%%%

%%%Fixed in svn rev46148. Thanks for the report, closing.%%%

%%%Fixed in svn rev46148. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31185
No description provided.