Fox #31185: Cannot sculpt shape keys

Was related on sculpting on locked keys. Issue was caused by building
PBVH from base mesh which is now doesn't have shape key loaded into
it as it was in 2.62.

Fixed by loading coordinates from deformed mesh into PBVH like it
happens for on-locked shape keys.